Update and rename tour-ism.html to index.html

--- a/index.html
+++ b/index.html
@@ -37,13 +37,13 @@
   <div id="carouselExampleSlidesOnly" class="carousel slide m-4" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
-        <img src="/Bootstrap/pexels-asad-photo-maldives-457878.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 1">
+        <img src="pexels-asad-photo-maldives-457878.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 1">
       </div>
       <div class="carousel-item">
-        <img src="/Bootstrap/hotel.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 2">
+        <img src="hotel.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 2">
       </div>
       <div class="carousel-item">
-        <img src="/Bootstrap/pexels-pixabay-417173.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 3">
+        <img src="pexels-pixabay-417173.jpg" class="d-block w-100" style="height: 400px;"alt="Tour image 3">
       </div>
     </div>
   </div>
@@ -98,7 +98,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title ">Coorg</h5>
-          <img src="/Bootstrap/website.html/pexels-keerthi-kumar-10860810.jpg" style="height: 200px; width:400px;"/>
+          <img src="pexels-keerthi-kumar-10860810.jpg" style="height: 200px; width:400px;"/>
           <p class="card-text">Located amidst imposing mountains in Karnataka with a perpetually misty landscape, Coorg is a popular coffee producing hill station. It is popular for its beautiful green hills and the streams cutting right through them. It also stands as a popular destination because of its culture and people....</p>
           <a href="#" class="btn btn-primary">Click here to Visit</a>
         </div>
@@ -108,7 +108,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title ">Leh Ladakh</h5>
-          <img src="/Bootstrap/pexels-anjali-vishwakarma-14477905.jpg" style="height: 200px; width:400px;"/>
+          <img src="pexels-anjali-vishwakarma-14477905.jpg" style="height: 200px; width:400px;"/>
           <p class="card-text">Ladakh is a union territory in the Kashmir region of India. Formerly falling in the state of Jammu & Kashmir, Ladakh was administered a union territory on 31st October 2019. Extending from the Siachen Glacier to the main Great Himalayas, Ladakh is a land like no other. </p>
           <a href="#" class="btn btn-primary">Click here to Visit</a>
         </div>
@@ -120,7 +120,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Udaipur</h5>
-          <img src="/Bootstrap/pexels-ankush-rathi-925069.jpg" style="height: 200px; width:400px;"/>
+          <img src="pexels-ankush-rathi-925069.jpg" style="height: 200px; width:400px;"/>
           <p class="card-text">Udaipur, also known as the City of Lakes, is one of the most visited tourist places in Rajasthan. Located around stunning water lakes and enveloped by the Aravalli Hills in all directions, Udaipur is known for its azure lakes, magnificent palaces, vibrant culture and delectable food.</p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
@@ -130,7 +130,7 @@
       <div class="card">
         <div class="card-body">
           <h5 class="card-title">Munnar</h5>
-          <img src="/Bootstrap/pexels-nandhu-kumar-13691355.jpg" style="height: 200px; width:300px;"/>
+          <img src="pexels-nandhu-kumar-13691355.jpg" style="height: 200px; width:300px;"/>
           <p class="card-text">Popular among honeymooners, Munnar is a hill station in Kerala, located in the Idukki district. Lying in the Western Ghats at 1600 metres, it is one of the most sought after and visited travel destinations globally, especially popular amongst honeymooners. </p>
           <a href="#" class="btn btn-primary">Go somewhere</a>
         </div>
